--- a/.github/workflows/Lab7_Pipeline_CI_App.yml
+++ b/.github/workflows/Lab7_Pipeline_CI_App.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 env: # variables 
-  REGISTRY_NAME: "acrjsduchene"
+  REGISTRY_NAME: "acrjsduchene2023"
   APP_NAME: "coolapi"
   IMAGE_VERSION: "1.0.0"
 
